--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
   <!-- Header section -->
   <header>
-    <img src="logo.jpeg" alt="Deakin" width="200" height="210" >
+    <img src="logo.svg" alt="Deakin" class="logo">
     <h1>SIT223-SIT753 - Professional Practice in IT</h1>
   </header>
+
 </body>
 </html>
