--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Header section -->
   <header>
-    <img src="logo.svg" alt="Deakin" class="logo">
+    <img src="Deakin_University_Logo_2017.svg" alt="Deakin" class="logo">
     <h1>SIT223-SIT753 - Professional Practice in IT</h1>
   </header>
 
