--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Home</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
-</head>
 <body>
+  <h1>SIT223-SIT753 - Professional Practice in IT</h1>
 
-  <!-- Header section -->
-  <header>
-    <img src="Deakin_University_Logo_2017.svg" alt="Deakin" class="logo">
-    <h1>SIT223-SIT753 - Professional Practice in IT</h1>
-  </header>
-
+  <h2>Unit Details</h2>
+  <table>
+    <tr>
+      <th>Unit Chair</th>
+      <th>Enrolment Modes</th>
+      <th>Year</th>
+    </tr>
+    <tr>
+      <td>Dr. John Smith</td>
+      <td>Cloud, Campus</td>
+      <td>2025</td>
+    </tr>
+  </table>
 </body>
-</html>
