--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Home</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
+</head>
 <body>
-  <h1>SIT223-SIT753 - Professional Practice in IT</h1>
 
-  <h2>Unit Details</h2>
-  <table>
-    <tr>
-      <th>Unit Chair</th>
-      <th>Enrolment Modes</th>
-      <th>Year</th>
-    </tr>
-    <tr>
-      <td>Dr. John Smith</td>
-      <td>Cloud, Campus</td>
-      <td>2025</td>
-    </tr>
-  </table>
+  <!-- Header section -->
+  <header>
+    <img src="logo.png" alt="Site Logo" class="logo">
+    <h1>SIT223-SIT753 - Professional Practice in IT</h1>
+  </header>
+
 </body>
+</html>
