--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Header section -->
   <header>
-    <img src="logo.jpeg" alt="Site Logo" class="logo">
+    <img src="logo.jpeg" alt="Site Logo" class="logo" width="200" height="210">
     <h1>SIT223-SIT753 - Professional Practice in IT</h1>
   </header>
 
